# toolconfig-core-py

./: .buildinfo  .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  cli.html  contributing.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  requirements.txt  requirements_dev.txt  requirements_test.txt  search.html  searchindex.js  setup.cfg  toolconfig_core.ecpy.html  toolconfig_core.html
.github/workflows/: documentation.yaml  main.yml
_modules/: index.html
_modules/toolconfig_core/: config_file.html  ecpy.html  exceptions.html
_modules/toolconfig_core/ecpy/: compat.html  exceptions.html  fnmatch.html  handler.html  ini.html  versiontools.html
_sources/: index.rst.txt  modules.rst.txt  toolconfig_core.ecpy.rst.txt
doc/: Makefile  conf.py  index.rst
doc/source/: cli.rst  conf.py  toolconfig_core.ecpy.rst  toolconfig_core.rst
doc/source/_templates/: package.rst_t
src/toolconfig_core/: __init__.py  __main__.py  config_file.py  exceptions.py  glob.py  handler.py  normalize.py
src/toolconfig_core/ecpy/: __init__.py  __main__.py  exceptions.py  handler.py  ini.py
src/toolconfig_core/tc/: handler.py
tests/: basic.expected.toml  basic.in.toml  conftest.py  test_configfile.py  test_ecpy_editorconfigfile.py  test_glob.py  test_handler.py  test_normalize.py  test_sanity.py
