[metadata]
name = toolconfig_core
version = attr: toolconfig_core.VERSION
author = Christopher White
author_email = cxwembedded@gmail.com
description = Core for ToolConfig
license = BSD-2-Clause
url = "https://github.com/cxw42/toolconfig-core-py"
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
# Need Py 3.7+ for dicts that preserve order
python_requires = >=3.7
package_dir =
    =src
packages = find:

install_requires =
    tomli
    tomli-w

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    toolconfig = toolconfig_core.__main__:main
    toolconfig-normalize = toolconfig_core.normalize:main
